# BrainPrint

./: .gitignore  README.md  pyscript_coregister.m  setup.cfg  subjects.csv  tmp.ipynb
Preprocessing/dwi/: connectome_properties.py  preprocess_dwi.py  register_by_freesurfer.py
Preprocessing/fmri/: extract_freesurfer_metrics.py  fmriprep.py
features_generation/: gather_features.ipynb  parcellate_features.py
features_generation/utils/: features.py
preprocessing/dwi/: calculate_metrics_per_regions.py  extract_tracts.py  register_by_freesurfer.py
preprocessing/dwi/freesurfer_registers/: longitudinal.py  single_session.py
preprocessing/dwi/utils/: features.py
preprocessing/fmri/: extract_freesurfer_metrics.py
preprocessing/smri/: calculate_metrics_per_regions.py
preprocessing/smri/recon_all/: messages.py  recon_all_results.py  stats.py
src/brainprint/feature_generation/: cli.py  extract_features.py  gather_features.ipynb  messages.py  subject_results.py
src/brainprint/feature_generation/utils/: features.py  functions.py  parcellation.py
src/brainprint/predictive_modelling/: age.ipynb  sex.ipynb
src/brainprint/predictive_modelling/utils/: data.py
src/brainprint/preprocessing/dwi/: calculate_metrics_per_regions.py  extract_tracts.py  preprocess_dwi.py  register_by_freesurfer.py
src/brainprint/preprocessing/dwi/freesurfer_registers/: longitudinal.py  single_session.py
src/brainprint/preprocessing/dwi/utils/: parcellation.py
src/brainprint/preprocessing/smri/: register_atlas.py
src/brainprint/preprocessing/smri/recon_all/: recon_all_results.py
src/brainprint/preprocessing/smri/utils/: features.py
src/brainprint/utils/: __init__.py  modality.py
src/brainprint/utils/parcellations/: __init__.py  parcellations.py
src/brainprint/utils/parcellations/Brainnetome/: BNA_with_cerebellum.csv
