[metadata]
name = brainprint
version = 0.1.0
author = Gal Ben-Zvi
author_email = hershkovitz1@mail.tau.ac.il
description = MRI brainprinting research utilities.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = mri, neuroscience
url = https://github.com/GalBenZvi/brainprint
project_urls =
    Source = https://github.com/GalBenZvi/brainprint
    Bug Reports = https://github.com/GalBenZvi/brainprint/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7, <4
install_requires =
    nibabel
    nilearn
    numpy
    pandas
    tqdm

[options.extras_require]
all =
    black==21.5b1
    build
    coverage[toml]~=5.5
    doc8~=0.8
    flake8~=3.7
    ipython
    isort~=5.8
    jinja2~=3.0
    pandas~=1.3
    pytest~=6.2
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
    tox~=3.23
    tqdm    
    twine
dev =
    black==21.5b1
    coverage[toml]~=5.5
    doc8~=0.8
    flake8~=3.7
    ipython
    isort~=5.8
    pytest~=6.2
    python-magic~=0.4;platform_system!="Windows"
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
    tox~=3.23
test =
    coverage[toml]~=5.5
    pytest~=6.2
    tox~=3.23
dist =
    build
    twine
docs =
    sphinx~=4.0
    sphinx-rtd-theme~=0.5

[options.packages.find]
where = src

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501